Fixed image dimensions on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -115,13 +115,13 @@ a {
   transform: rotate(-25deg);
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 900px) {
   #drake {
     background: url('/images/drake_mob.png') no-repeat right top;
     left: calc(50% - 750px/2);
     top: 0;
-    width: 750px;
-    height: 250px;
+    width: 620px;
+    height: 227px;
   }
 
   #patron {
